--- a/presentation/index.html
+++ b/presentation/index.html
@@ -80,7 +80,7 @@
 
 </div>
 <ul>
-<li>protocole RS323</li>
+<li>protocole RS232</li>
 <li>full duplex</li>
 <li>plutôt facile à utiliser</li>
 <li>très utilisé encore de nos jours dans l'IoT</li>
@@ -92,8 +92,7 @@
 </div>
 <ul>
 <li>framework web léger</li>
-<li>création facile d'appli web</li>
-<li>Matthieu + Flask = 💘</li>
+<li>création facile d'appli WEB</li>
 </ul>
 </section><section id="charting" class="slide level2">
 <h1>Charting</h1>
