amélioration du makefile et correction d'un probleme de chemin sur les fichiers statiques...

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -115,7 +115,7 @@
 </ul>
 </section><section id="section-2" class="slide level2">
 <h1></h1>
-<p><img src="/demo.jpg" style="width: 45%; height: 45%"/></p>
+<p><img src="demo.jpg" style="width: 45%; height: 45%"/></p>
 </section></section>
 <section><section id="et-alors" class="titleslide slide level1"><h1>Et alors ?</h1></section><section id="prototypage" class="slide level2">
 <h1>Prototypage</h1>
@@ -162,7 +162,7 @@
 </ul>
 <hr>
 
-<p><img src="/biohazard.png"/></p>
+<p><img src="biohazard.png"/></p>
 <p>Inspiration / découverte / pas en production</p>
 </section><section id="shameless-plug" class="slide level2">
 <h1>Shameless plug</h1>
@@ -172,7 +172,7 @@
 </ul>
 </section><section id="merci" class="slide level2">
 <h1>Merci</h1>
-<p><img src="/axolot.png" style="width: 45%; height: 45%"/></p>
+<p><img src="axolot.png" style="width: 45%; height: 45%"/></p>
 </section></section>
     </div>
   </div>
